test/tests/compiler/8_loops/valid/multi_break.plx
pub fn main(none) i32 {
    i: i32 = 0
    loop while 1 {
        i = i + 1
        if i > 10 {
            break
        }
    }
    j: i32 = 10
    loop while 1 {
        j = j - true
        if j < 0 {
            break }
    }
    result: i32 = j == -1 and i == 11
    return result
}

