test/tests/compiler/8_loops/invalid_semantics/extra_credit/case_outside_switch.plx
pub fn main(none) i32 {
    loop i: i32 = 0 while i < 10 .. i = i + 1 {
        #  case statements can only appear inside switch statements
        -> 0 {
            return 1
        }
    }
    return 9
}
